Fix flexbox alignment warnings in Pages.css

--- a/frontend/src/pages/Pages.css
+++ b/frontend/src/pages/Pages.css
@@ -6,8 +6,8 @@
 .content { 
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    align-items: flex-start;
+    justify-content: flex-start;
     width: 100%;
     margin: 15px;
  
@@ -16,8 +16,8 @@
 .task-list {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    align-items: flex-start;
+    justify-content: flex-start;
     width: 100%;
     margin: 15px;
     padding: 0;
